@@ -1,6 +1,7 @@
 WebHelpers ChangeLog
 
 0.2.3 (**svn**)
+* Sync'd Asset tag helper to 6057.
 * Sync'd Rails Number helper to 6045.
 * Updated Ajax commands to internally use 'with_' to avoid name conflicts with
   Python 2.5 and beyond. Reported by anilj. Fixes #190.
